--- a/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
+++ b/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
@@ -6,10 +6,11 @@
 /* 通常時の画像スタイル */
 .collapsed-image {
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     border-radius: 10px 10px 0 0;
     background-color: #ccc;
     margin: 0;
+    padding-bottom: 20px;
     /* 通常時特有のスタイルをここに追加 */
 }
 
@@ -28,6 +29,7 @@
     background-color: #9C958C;
 }
 
+
 .testtt{
     width: 100%;
 }
@@ -38,13 +40,18 @@
 
 /* 展開時の画像スタイル */
 .expanded-image {
-    width: 100%;
-    height: 70vh;
+    width: 80%;
+    height: 100vh;
     margin: 20px 0 20px 20px;
     border-radius: 10px;
     background-color: #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     object-fit: cover;
+}
+
+.proming{
+    width: 100%;
+
 }
 
 .expanded-Size{
@@ -121,6 +128,7 @@
     border-bottom: 2px solid;
     border-image: linear-gradient(to left, #cccccc, #000000) 1;
 }
+
 
 /* 画像リスト */
 ul.piclist{
@@ -227,6 +235,7 @@ li.picts a img.pictS{
 
 .expanded-reverse{
     padding: 0;
+    margin-left: 220px;
     text-align: center;
     font-size: 3rem;
 }
@@ -321,11 +330,11 @@ li.picts a img.pictS{
     /* 閉じるボタンのスタイル調整 */
     .expanded-reverse {
         position: fixed;
-        top: 20px;
-        right: 20px;
+        top: 70px;
+        right: 5px;
         width: 40px !important;
         height: 40px !important;
-        background-color: rgba(200, 200, 200, 0.7);
+        background-color: rgba(239, 226, 211, 0.7);
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -333,12 +342,23 @@ li.picts a img.pictS{
         cursor: pointer;
         z-index: 1001;
     }
+    ul.piclist{
+        display: flex;
+        justify-content: left;
+        margin: 20px 0 10px 40px;
+        padding: 0;
+    }
     .product-card-list .collapsible-product-card.expanded {
         width: 100% !important;
         margin: 0;
         order: -1;  /* 展開したカードを最上部に移動 */
     }
 
+    .ResponsiveExpandedImage {
+        margin-top: 20px;
+        width: 100vw !important; /* ビ   ューポート幅いっぱい */
+        height: 60vh !important; /* ビューポート高さいっぱい */
+    }
 
     .expanded-reverse p {
         margin: 0;
