--- a/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
+++ b/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
@@ -154,6 +154,7 @@ li.picts a img.pictS{
 .expanded-Cart{
     padding: 15px;
     margin-top: 40px;
+    margin-bottom: 30px;
     text-align: center;
     border: 1.5px solid #000;
     border-radius: 30px;
