--- a/src/app/product/[id]/product.css
+++ b/src/app/product/[id]/product.css
@@ -159,11 +159,15 @@ div#text p {
     align-items: center;
 }
 .ProductInStripe{
+    display: flex;
     margin-top:  -50px;
     margin-left: 90px;
 }
-
-
+.ProductInHeart {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
 div#text a#seller h2{
     font-size: 1.2rem;
 }
