--- a/src/app/_components/chat/chat.css
+++ b/src/app/_components/chat/chat.css
@@ -113,8 +113,6 @@ button img#sendMsg{
 
 .comment-sec-rig{
     padding-top: 15px;
-    display: flex;
-    justify-content: flex-end;
 }
 
 .comment-user-rig{
@@ -140,4 +138,37 @@ button img#sendMsg{
     border: #000 1px solid;
     background-color: #ddd;
     justify-content: flex-end;
+}
+
+@media screen and (max-width: 1060px) {
+
+    /*チャット*/
+
+    .comment-areaFrame{
+        /*padding: 10px;*/
+        width: 100%;
+        margin: 0 auto;
+        border-radius: 5px;
+        border: #000 2px solid;
+        background-color: #bbb;
+    }
+
+    .comment-area-lef{
+        width: 80%;
+    }
+
+    /*---右寄せのチャット範囲---*/
+    .comment-area-rig{
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: 80%;
+        padding: 10px 15px 10px 10px;
+        margin-left:  55px;
+        margin-bottom: 10px;
+        overflow-wrap: break-word;
+        border-radius: 10px;
+        border: #000 1px solid;
+        background-color: #fff;
+    }
 }
