--- a/src/app/product/[id]/product.css
+++ b/src/app/product/[id]/product.css
@@ -271,6 +271,7 @@ div#footer {
         display: flex;
         margin-left: 60px;
         margin-top: 20px;
+        margin-bottom: 30px;
     }
 
     .ProductInHeart {
