--- a/src/app/tradeChat/[productId]/trade.css
+++ b/src/app/tradeChat/[productId]/trade.css
@@ -66,7 +66,7 @@ div#text a#seller{
     display: flex;
     align-items: center;
     flex-direction: row;
-    margin: 10px 10px 10px 10px;
+    margin: 10px 0px;
     color: #000;
     text-decoration: none;
 }
@@ -287,4 +287,83 @@ button img#sendMsg{
     font-size: 0.9rem;
     text-align: center;
     margin-left: 5px;
+}
+
+
+@media screen and (max-width: 1060px) {
+    div#product{
+        width: 100%;
+        display: flex;
+        margin-left: 0;
+        margin-top: 190px;
+    }
+    div#info{
+        flex-direction: column;
+    }
+
+    div#photo{
+        width: 400px;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .responsiveTradeChatSmartPhoneMainImage{
+        width: 100%;
+        height:  auto;
+    }
+    /*商品説明 #text*/
+    div#text{
+        width: 400px;
+        justify-content: center;
+        margin: 0 auto;
+        margin-top: 52px;
+    }
+
+    div#text h1{
+        font-size: 1.5rem;
+    }
+
+
+    a#seller {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        color: #000;
+        text-decoration: none;
+    }
+
+    div.evaluation{
+        width: 400px;
+        display: block;
+        margin: 0 auto;
+    }
+    div.evaluation_Chat input{
+        width: 100%;
+        height: 90px;
+        margin: 0 auto;
+        word-break: break-all;
+    }
+
+    div.responsiveTradeLastReview{
+        margin-top: 30px;
+        margin-left: 20px;
+        display: flex;
+    }
+
+    button.responsiveTradeLastReviewButton{
+        margin-right: 30px;
+    }
+
+    div#responsiveControl{
+        margin-top: 30px;
+        display: flex;
+        margin-left: 10px;
+        margin-bottom: 40px;
+    }
+
+    div#control{
+        width: 300px;
+        margin: 0 auto;
+    }
+
 }
