--- a/src/app/toppage/toppage.css
+++ b/src/app/toppage/toppage.css
@@ -169,4 +169,37 @@ li.toppageBottomLi h2 {
         margin: 0 auto;
         font-size: 1rem;
     }
+
+
+    div.toppageBottomPicture_Text {
+        display: flex;
+        align-items: center;
+        height: 200px;
+        margin-top: 300px;
+    }
+
+
+    ul.toppageBottomUl {
+        width: 100%;
+        display: block;
+        align-items: center;
+        list-style: none;
+    }
+
+
+    li.toppageBottomLi {
+        width: 100%;
+        margin-top: 40px;
+       text-align: center;
+        align-items: center;
+    }
+
+
+    .toppageBottomImage {
+        width: 430px !important;
+        height: auto;
+        align-items: center;
+        margin: 0;
+    }
+
 }
